--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:mysql://localhost:${MYSQL_PORT:3306}/${MYSQL_DATABASE
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# jpa configuration
+spring.jpa.hibernate.ddl-auto=validate
