--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,9 @@
 
 # Credenciales de MySQL
 MYSQL_ROOT_PASSWORD=?
-MYSQL_DATABASE=comandera_db
+MYSQL_DATABASE=aros_db
 MYSQL_USER=?
 MYSQL_PASSWORD=?
 
 # Puerto expuesto en el host
 MYSQL_PORT=3306
-
