feat: set up authentication system foundation
- Add core domain services: PasswordHasher, TokenService, AdminAuthService
- Implement infrastructure: JwtService, BCryptPasswordHasher, SecurityConfig
- Create authentication use cases and DTOs
- Configure Spring Security with JWT support
- Set up admin security validation and password checks

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # ======================
 # Copiar este archivo a ".env" y ajustar credenciales personales
 
+# Credenciales de administrador
+ADMIN_EMAIL=?
+ADMIN_PASSWORD_HASH=?
+
 # Credenciales de MySQL
 MYSQL_ROOT_PASSWORD=?
 MYSQL_DATABASE=aros_db
