--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa configuration
 spring.jpa.hibernate.ddl-auto=validate
+security.token.lifetime=168
+
+# security
+security.token.secret=adpflasmd0i128a8q818123lafosdfiuas
+security.token.lifetime=168
+
+# admin configuration
+admin.email=${ADMIN_EMAIL}
+admin.password=${ADMIN_PASSWORD_HASH}
