--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,19 @@
 # .env.example
 # ======================
-# Copiar este archivo a ".env" y ajustar credenciales personales
+# Copy this file to ".env" and adjust personal credentials
 
-# Credenciales de administrador
-ADMIN_EMAIL=?
-ADMIN_PASSWORD_HASH=?
-
-# Credenciales de MySQL
+# Database Configuration
 MYSQL_ROOT_PASSWORD=?
 MYSQL_DATABASE=aros_db
 MYSQL_USER=?
 MYSQL_PASSWORD=?
-
-# Puerto expuesto en el host
 MYSQL_PORT=3306
+
+# Application Security
+ADMIN_EMAIL=?
+ADMIN_PASSWORD_HASH=?
+TOKEN_SECRET=adpflasmd0i128a8q818123lafosdfiuas
+
+# Application Configuration
+LOGGING_LEVEL_APP=INFO
+LOGGING_LEVEL_ROOT=WARN
