--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,22 @@
 spring.application.name=api
 
-# Config de MySQL
+# MySQL
 spring.datasource.url=jdbc:mysql://localhost:${MYSQL_PORT}/${MYSQL_DATABASE}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# jpa configuration
+# JPA
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+
+# Security
+security.token.secret=${TOKEN_SECRET}
 security.token.lifetime=168
+admin.email=${ADMIN_EMAIL}
+admin.password=${ADMIN_PASSWORD_HASH}
 
-# security
-security.token.secret=adpflasmd0i128a8q818123lafosdfiuas
-security.token.lifetime=168
-
-# admin configuration
-admin.email=admin@example.com
-admin.password=$2a$10$z0KX/N8FQz/h3ZdpF6VjqeWOM2Kq5kQ9vRz2tU0j.7zYvMxWpqzGq
-
-
-# admin.email=${ADMIN_EMAIL}
-# admin.password=${ADMIN_PASSWORD_HASH}
+# Logging
+logging.level.accrox.aros.api=${LOGGING_LEVEL_APP}
+logging.level.root=${LOGGING_LEVEL_ROOT}
+debug=false
