Fix problem in updateUserArea

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,5 @@ security.token.secret=adpflasmd0i128a8q818123lafosdfiuas
 security.token.lifetime=168
 
 # admin configuration
-admin.email=admin@example.com
-admin.password=$2a$10$z0KX/N8FQz/h3ZdpF6VjqeWOM2Kq5kQ9vRz2tU0j.7zYvMxWpqzGq
-
-
-# admin.email=${ADMIN_EMAIL}
-# admin.password=${ADMIN_PASSWORD_HASH}
+admin.email=${ADMIN_EMAIL}
+admin.password=${ADMIN_PASSWORD_HASH}
