--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa configuration
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 security.token.lifetime=168
 
 # security
