chore(ci-cd): migrate from MySQL 8.1 to MariaDB 11 and add Docker-based build/deploy pipeline
- Replaced MySQL 8.1 image with MariaDB 11.2.6
- Added build/Dockerfile and build/compose.yml for API deployment
- Updated Taskfile.yml to include 'build' target
- Added build/.env.deploy.example for deployment variables
- Adjusted spring.datasource.url to match container hostname

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -23,6 +23,14 @@ tasks:
     cmds:
       - "{{.MVN}} test"
 
+  build:
+    desc: run deploy containers
+    cmds:
+      - "{{.MVN}} clean package"
+      - cp target/*.jar build/
+      - docker compose -f build/compose.yml up
+
+
   clean:
     desc: Clean build artifacts
     cmds:
@@ -41,12 +49,13 @@ tasks:
     cmds:
       - docker compose down
 
-  mysql:
-    desc: open database
+  db:
+    desc: open NAME
     cmds:
-      - docker exec -it aros_db bash -c 'mysql -u $MYSQL_USER -p$MYSQL_PASSWORD'
+      - docker exec -it aros_db bash -c 'mariadb -p$DB_ROOT_PASSWORD'
+
   reset_db:
-    desc: Reset database containers and volumes
+    desc: Reset NAME containers and volumes
     cmds:
       - docker compose down -v
       - docker compose up -d
