--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 	</parent>
 	<groupId>accrox.aros</groupId>
 	<artifactId>api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<name>api</name>
 	<description>API for Accrox Restaurant Ordering System</description>
 	<properties>
 		<java.version>21</java.version>
+		<jar.final.name>aros-${project.artifactId}-${project.version}</jar.final.name>
 	</properties>
 	<dependencies>
 	<!-- springboot -->
@@ -40,11 +41,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<!-- database -->
+		<!-- NAME -->
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>3.5.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
@@ -79,6 +80,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>${jar.final.name}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
