--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=api
 
-# Config de MySQL
-spring.datasource.url=jdbc:mysql://localhost:${MYSQL_PORT}/${MYSQL_DATABASE}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Config de DB
+spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=root
+spring.datasource.password=${DB_ROOT_PASSWORD}
 
 # jpa configuration
 spring.jpa.hibernate.ddl-auto=validate
@@ -18,5 +17,5 @@ admin.password=${ADMIN_PASSWORD_HASH}
 
 # Logging
 logging.level.accrox.aros.api=${LOGGING_LEVEL_APP}
-logging.level.root=${LOGGING_LEVEL_ROOT}
+logging.level.root=WARN
 debug=false
