chores: change Maven wrapper directory to .wraper
- Move wrapper files from scripts/ to .wraper/
- Update Taskfile.yml mvnw references
- Adjust build environment configuration

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ target/
 build/*.jar
 .env
 docs/api_request/
-
+.classpath
+.project
+.settings/
 
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
