--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '21'
 
       - name: Start services with docker-compose
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Build project with Maven
         run: ./.wrapper/mvnw clean package
@@ -27,10 +27,10 @@ jobs:
         run: cp target/*.jar build/
 
       - name: Stop services
-        run: docker-compose down
+        run: docker compose down
 
       - name: Build Docker image with docker-compose
-        run: docker-compose -f build/compose.yml build
+        run: docker compose -f build/compose.yml build
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
