refactor: update auth dto

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DB_PORT=3301
 DB_HOST=localhost
 
 # Application Security
-ADMIN_EMAIL=?
+ADMIN_DOCUMENT=?
 ADMIN_PASSWORD_HASH=?
 TOKEN_SECRET=adpflasmd0i128a8q818123lafosdfiuas
 
