--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.open-in-view=false
 # Security
 security.token.secret=${TOKEN_SECRET}
 security.token.lifetime=168
-admin.email=${ADMIN_EMAIL}
+admin.document=${ADMIN_DOCUMENT}
 admin.password=${ADMIN_PASSWORD_HASH}
 
 # Logging
