--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ admin.password=${ADMIN_PASSWORD_HASH}
 logging.level.accrox.aros.api=${LOGGING_LEVEL_APP}
 logging.level.root=WARN
 debug=false
+
+# DevTools Configuration (disable auto-restart if needed)
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=false
