chore: update devops options

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ ADMIN_PASSWORD_HASH=?
 TOKEN_SECRET=adpflasmd0i128a8q818123lafosdfiuas
 
 # Application Configuration
-LOGGING_LEVEL_ROOT=WARN
 LOGGING_LEVEL_APP=INFO
+ALLOWED_ORIGINS="http://localhost:4200"
