--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
 
 # Security
+security.origins=${ALLOWED_ORIGINS}
 security.token.secret=${TOKEN_SECRET}
 security.token.lifetime=168
 admin.document=${ADMIN_DOCUMENT}
