--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,27 +2,25 @@ name: Build API image
 on: 
   workflow_dispatch:
   push:
-    branches:
-      - dev
+    branches: [ dev ]
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    env:
+      DB_NAME: ${{vars.DB_NAME}}
+      DB_ROOT_PASSWORD: ${{secrets.DB_ROOT_PASSWORD}}
+      DB_PORT: ${{vars.DB_PORT}}
+      DB_HOST: ${{vars.DB_HOST}}
+      ADMIN_DOCUMENT: ${{vars.ADMIN_DOCUMENT}}
+      ADMIN_PASSWORD_HASH: ${{secrets.ADMIN_PASSWORD_HASH}}
+      TOKEN_SECRET: ${{secrets.TOKEN_SECRET}}
+      LOGGING_LEVEL_APP: ${{vars.LOGGING_LEVEL_APP}}
+      ALLOWED_ORIGINS: ${{vars.ALLOWED_ORIGINS}}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Create .env file
-        run: |
-          echo "DB_NAME=aros_db" >> .env
-          echo "DB_PORT=3301" >> .env
-          echo "DB_HOST=localhost" >> .env
-          echo "ADMIN_DOCUMENT=admin@aros.co" >> .env
-          echo "LOGGING_LEVEL_APP=INFO" >> .env
-          echo "LOGGING_LEVEL_ROOT=WARN" >> .env
-          echo "DB_ROOT_PASSWORD=${{ secrets.DB_ROOT_PASSWORD }}" >> .env
-          echo "ADMIN_PASSWORD_HASH=${{ secrets.ADMIN_PASSWORD_HASH }}" >> .env
-          echo "TOKEN_SECRET=${{ secrets.TOKEN_SECRET }}" >> .env
-
 
       - name: Set up Java 21
         uses: actions/setup-java@v3
@@ -43,7 +41,7 @@ jobs:
         run: docker compose down
 
       - name: Build Docker image with docker-compose
-        run: docker compose -f build/compose.yml build
+        run: docker build -t buhoaullador/aros-api:latest build/
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
